Fixed alignment of Like link. Not sure if action items should be like-able...

--- a/sass/_project-sass/_project-Main.scss
+++ b/sass/_project-sass/_project-Main.scss
@@ -601,6 +601,7 @@ a.tag:hover {
 }
 .news-item .actions {
   font-size: 11px;
+  margin-left: 2.9em;
 }
 .news-item .actions a {
   margin-right: 6px;
